# haskell-project-template

./: x.cabal
app/: x.hs
